<resources>
    <string name="app_name">中都智能</string>
    <string name="user_center">我的</string>
    <string name="message">消息</string>
    <string name="index">首页</string>
    <string name="monitoring">监控</string>
    <string name="car">车辆</string>
    <string name="device">设备</string>
    <string name="inventory">盘点</string>

    <string name="back">返回</string>
    <string name="company_name">中都物流</string>
    <string name="save">保存</string>
    <string name="ip">IP地址：</string>
    <string name="port">端口号：</string>
    <string name="settingIpPort">设置IP端口</string>
    <string name="login">登录</string>
    <string name="more">更多</string>
    <string name="save_password">记住密码</string>
    <string name="password">密码</string>
    <string name="username_email">用户名/邮箱</string>
    <string name="account">账号</string>
    <string name="userInfo">用户信息</string>
    <string name="loginId">姓名</string>
    <string name="username">用户名</string>
    <string name="roleType">角色</string>
    <string name="email">邮箱</string>
    <string name="mobilePhone">电话</string>
    <string name="about_me">关于我们</string>
    <string name="layout">退出登录</string>
    <string name="selectShop">选择商店</string>
    <string name="bind_device">设备绑定</string>
    <string name="relieve_device">解绑设备</string>
    <string name="car_vin">车架号：</string>
    <string name="device_num">设备号：</string>
    <string name="ensure_bind">确认绑定</string>
    <string name="ensure_relieve">确认解绑</string>
    <string name="dealer">经销商</string>
    <string name="bank">银行</string>
    <string name="settings">设置</string>
    <string name="version">版本信息</string>
    <string name="clear_cache">清理缓存</string>
    <string name="relieve">解绑</string>
    <string name="car_count">车辆数：</string>
    <string name="shop_count">商店数：</string>

    <array name="message_type">
        <item>订阅</item>
        <item>全部</item>
    </array>
    <array name="message_status">
        <item>未读</item>
        <item>已读</item>
    </array>
</resources>
