<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/relative"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.iftech.car.inventory.activity.InventoryTabActivity">
    <FrameLayout
            android:id="@+id/fragment_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    <View
            android:id="@+id/lines1"
            android:layout_below="@+id/fragment_content"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray"/>
    <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_below="@id/lines1"
            android:layout_height="50dp"
            android:orientation="horizontal">
        <RadioButton
                android:id="@+id/indexButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:button="@null"
                android:text="@string/index"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_gravity="center"/>
        <RadioButton
                android:id="@+id/messageButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:button="@null"
                android:layout_weight="1"
                android:text="@string/message"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_gravity="center"/>
        <RadioButton
                android:id="@+id/userCenterButton"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:button="@null"
                android:layout_weight="1"
                android:text="@string/user_center"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_gravity="center"/>
    </RadioGroup>
</LinearLayout>
