<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.iftech.car.trace.ui.activity.UserInfoActivity">
    <include
        android:id="@+id/title"
        layout="@layout/toolbar_back"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/textview_top_bottom_border">
                <LinearLayout
                        android:id="@+id/r1l1"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_height="40dp"
                        android:orientation="horizontal">
                    <TextView
                            style="@style/UserCenterKey"
                            android:text="@string/username"/>
                    <TextView
                            android:id="@+id/userName"
                            style="@style/UserCenterValue"/>
                </LinearLayout>
                <View
                        android:id="@+id/lines1"
                        android:layout_below="@+id/r1l1"
                        android:layout_marginLeft="10dp"
                        style="@style/Lines"/>
                <LinearLayout
                        android:id="@+id/r1l2"
                        android:layout_below="@id/lines1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:orientation="horizontal">
                    <TextView
                            style="@style/UserCenterKey"
                            android:text="@string/loginId"/>
                    <TextView
                            android:id="@+id/userLoginId"
                            style="@style/UserCenterValue"/>
                </LinearLayout>
                <View
                        android:id="@+id/lines2"
                        android:layout_below="@+id/r1l2"
                        android:layout_marginLeft="10dp"
                        style="@style/Lines"/>
                <LinearLayout
                        android:layout_below="@+id/r1l2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:orientation="horizontal">
                    <TextView
                            style="@style/UserCenterKey"
                            android:text="@string/roleType"/>
                    <TextView
                            android:id="@+id/roleTypeDisplay"
                            style="@style/UserCenterValue"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_below="@+id/rl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/textview_top_bottom_border">

                <LinearLayout
                        android:id="@+id/r2l1"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_height="40dp"
                        android:orientation="horizontal">
                    <TextView
                            style="@style/UserCenterKey"
                            android:text="@string/mobilePhone"/>
                    <TextView
                            android:id="@+id/userPhone"
                            style="@style/UserCenterValue"/>
                </LinearLayout>
                <View
                        android:id="@+id/lines3"
                        android:layout_below="@+id/r2l1"
                        android:layout_marginLeft="10dp"
                        style="@style/Lines"/>
                <LinearLayout
                        android:id="@+id/r2l2"
                        android:layout_below="@+id/lines3"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:orientation="horizontal">
                    <TextView
                            style="@style/UserCenterKey"
                            android:text="@string/email"/>
                    <TextView
                            android:id="@+id/userEmail"
                            style="@style/UserCenterValue"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                    android:id="@+id/rl3"
                    android:layout_below="@+id/rl2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/textview_top_bottom_border">
                <LinearLayout
                        android:id="@+id/r3l1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:orientation="horizontal">
                    <TextView
                            style="@style/UserCenterKey"
                            android:text="@string/dealer"/>
                    <TextView
                            android:id="@+id/dealer"
                            style="@style/UserCenterValue"/>
                </LinearLayout>
                <View
                        android:id="@+id/lines4"
                        android:layout_below="@+id/r3l1"
                        android:layout_marginLeft="10dp"
                        style="@style/Lines"/>
                <LinearLayout
                        android:id="@+id/r3l2"
                        android:layout_below="@+id/lines4"
                        android:layout_width="match_parent"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_height="40dp">
                    <TextView
                            style="@style/UserCenterKey"
                            android:text="@string/bank"/>
                    <TextView
                            android:id="@+id/bank"
                            style="@style/UserCenterValue"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
