<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="-20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/icon_location" />

                <TextView
                    android:id="@+id/shopTV"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:ellipsize="middle"
                    android:ems="15"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:text="请点击选择4S店"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:id="@+id/monitor_ll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/icon_monitorbtn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/monitoring"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/car_ll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/icon_carbtn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/car"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/device_ll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/icon_devicebtn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/device"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/inventory_ll"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="44dp"
                        android:src="@drawable/icon_inventorybtn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/inventory"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleGravity="center_horizontal"
                app:expandedTitleMarginBottom="100dp"
                app:expandedTitleTextAppearance="@style/expandedTitle"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="vertical">

                    <GridLayout
                        android:id="@+id/gridLayout"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:background="@color/white"
                        android:columnCount="4"
                        android:padding="15dp">

                        <ImageView
                            android:id="@+id/bind_img"
                            android:layout_columnWeight="1"
                            android:src="@drawable/icon_lock"
                            android:visibility="invisible" />

                        <ImageView
                            android:id="@+id/relieve_img"
                            android:layout_columnWeight="1"
                            android:src="@drawable/icon_deblock"
                            android:visibility="invisible" />

                        <ImageView
                            android:id="@+id/write_img"
                            android:layout_columnWeight="1"
                            android:src="@drawable/icon_write"
                            android:visibility="invisible" />

                        <ImageView
                            android:id="@+id/more_img"
                            android:layout_columnWeight="1"
                            android:src="@drawable/icon_more"
                            android:visibility="invisible" />
                    </GridLayout>

                    <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="15dp"
                        android:layout_below="@+id/gridLayout"
                        android:background="@color/gray" />
                </LinearLayout>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
            android:id="@+id/swipeToLoadLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.iftech.car.widget.RefreshHeaderView
                android:id="@id/swipe_refresh_header"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center" />

            <com.iftech.car.widget.EmptyRecyclerView
                android:id="@+id/swipe_target"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.iftech.car.widget.LoadMoreFooterView
                android:id="@id/swipe_load_more_footer"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center" />

        </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>

        <include
            android:id="@+id/id_empty_view"
            layout="@layout/layout_empty_view_index" />
    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>
